--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/permissions_fragment"
-        android:name="com.example.myapplication.fragment.PermissionsFragment"
+        android:name="com.example.myapplication.ui.fragment.PermissionsFragment"
         android:label="PermissionsFragment">
 
         <action
@@ -34,7 +34,7 @@
 
     <fragment
         android:id="@+id/camera_fragment"
-        android:name="com.example.myapplication.fragment.CameraFragment"
+        android:name="com.example.myapplication.ui.fragment.CameraFragment"
         android:label="CameraFragment">
 
         <action
