--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_record"
-        android:icon="@drawable/ic_record_wrapped"
+        android:icon="@drawable/ic_record"
         android:title="@string/ic_record" />
 
     <item
