--- a/app/src/main/res/layout/fragment_train.xml
+++ b/app/src/main/res/layout/fragment_train.xml
@@ -6,33 +6,36 @@
     android:layout_height="match_parent"
     android:background="#EFEDE1">
 
-    <!-- 柴犬圖片 -->
-    <ImageView
-        android:id="@+id/dogImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/dog_stretch"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/titleText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/titleText"
-        app:layout_constraintHorizontal_chainStyle="packed" />
-
-    <!-- 標題文字 -->
-    <TextView
-        android:id="@+id/titleText"
+    <!-- 包裝圖片 + 標題的 LinearLayout -->
+    <LinearLayout
+        android:id="@+id/titleContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/main_title"
-        android:textSize="24sp"
-        android:textColor="#000000"
-        android:fontFamily="@font/custom_font"
-        android:layout_marginStart="2dp"
-        app:layout_constraintTop_toTopOf="@id/dogImage"
-        app:layout_constraintBottom_toBottomOf="@id/dogImage"
-        app:layout_constraintStart_toEndOf="@id/dogImage"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="48dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 柴犬圖片 -->
+        <ImageView
+            android:id="@+id/dogImage"
+            android:layout_width="80dp"
+            android:layout_height="60dp"
+            android:src="@drawable/dog_stretch" />
+
+        <!-- 標題文字 -->
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/main_title"
+            android:textSize="24sp"
+            android:textColor="#000000"
+            android:fontFamily="@font/custom_font" />
+    </LinearLayout>
 
     <!-- 有壓力感測器按鈕 -->
     <androidx.appcompat.widget.AppCompatButton
@@ -47,7 +50,7 @@
         android:textColor="#000000"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/titleText"
+        app:layout_constraintTop_toBottomOf="@+id/titleContainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
