--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEDE1">
+    android:background="@color/primary">
 
     <!-- 包裝圖片 + 標題的 LinearLayout -->
     <LinearLayout
@@ -112,14 +112,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/btnAddTodayTraining"
+        android:id="@+id/btnCheckIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:background="@drawable/rounded_button_ripple"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
-        android:text="我完成了今天的訓練"
+        android:text="簽到"
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
