--- a/app/src/main/res/layout/fragment_train.xml
+++ b/app/src/main/res/layout/fragment_train.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFEDE1">
+    android:background="@color/primary">
 
     <!-- 包裝圖片 + 標題的 LinearLayout -->
     <LinearLayout
